# A7DieRolling

./: CMakeLists.txt
include/: die_rolling_simulation.h
src/: die_rolling_simulation.cpp  main.cpp
test/: test.cpp
